- fixes #655